--- a/services/bsky/Dockerfile
+++ b/services/bsky/Dockerfile
@@ -50,14 +50,18 @@ COPY ./packages/xrpc-server ./packages/xrpc-server
 COPY ./services/bsky ./services/bsky
 
 # install all deps
-RUN pnpm install --frozen-lockfile
+RUN --mount=type=cache,target=/root/.pnpm-store \
+    pnpm install --frozen-lockfile > /dev/null
 # build all packages with external node_modules
-RUN pnpm run --recursive --stream --filter '@atproto/crypto...' build
-RUN pnpm run --recursive --stream --filter '@atproto/bsky...' build
+RUN --mount=type=cache,target=/root/.pnpm-store \
+    pnpm run --recursive --stream --filter '@atproto/crypto...' build > /dev/null
+RUN --mount=type=cache,target=/root/.pnpm-store \
+    pnpm run --recursive --stream --filter '@atproto/bsky...' build > /dev/null
 # clean up
 RUN rm -rf node_modules
 # install only prod deps, hoisted to root node_modules dir
-RUN pnpm install --prod --shamefully-hoist --frozen-lockfile --prefer-offline
+RUN --mount=type=cache,target=/root/.pnpm-store \
+    pnpm install --prod --shamefully-hoist --frozen-lockfile --prefer-offline > /dev/null
 
 WORKDIR services/bsky
 
@@ -81,7 +85,7 @@ ENV NODE_ENV=production
 
 # https://github.com/nodejs/docker-node/blob/master/docs/BestPractices.md#non-root-user
 USER node
-CMD ["node", "--heapsnapshot-signal=SIGUSR2", "--enable-source-maps", "api.js"]
+CMD ["node", "--heapsnapshot-signal=SIGUSR2", "--enable-source-maps", "api-zeppelin.js"]
 
 LABEL org.opencontainers.image.source=https://github.com/bluesky-social/atproto
 LABEL org.opencontainers.image.description="Bsky App View"
