--- a/.github/workflows/build-and-push-bsky-ghcr.yaml
+++ b/.github/workflows/build-and-push-bsky-ghcr.yaml
@@ -31,6 +31,12 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Sanitize platform name
+        id: platform
+        run: |
+          platform=${{ matrix.platform }}
+          echo "safe=${platform//\//-}" >> $GITHUB_OUTPUT
+
       - name: Log into registry ${{ env.REGISTRY }}
         uses: docker/login-action@v3
         with:
@@ -57,11 +63,8 @@ jobs:
           platforms: ${{ matrix.platform }}
           file: ./services/bsky/Dockerfile
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: |
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:bsky-cache-shared
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:bsky-cache-${{ strategy.job-index }}
-          cache-to: |
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:bsky-cache-${{ strategy.job-index }},mode=max
+          cache-from: type=gha,scope=bsky-${{ steps.platform.outputs.safe }}
+          cache-to: type=gha,mode=max,scope=bsky-${{ steps.platform.outputs.safe }}
           build-args: |
             BUILDKIT_INLINE_CACHE=1
           outputs: type=image,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
@@ -75,7 +78,7 @@ jobs:
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ strategy.job-index }}
+          name: digests-${{ steps.platform.outputs.safe }}
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
