--- a/packages/pds/package.json
+++ b/packages/pds/package.json
@@ -25,8 +25,8 @@
     "postbuild": "node ./build.templates.js",
     "dev": "node ./build.templates.js --watch",
     "test": "../dev-infra/with-test-redis-and-db.sh jest",
-    "test:sqlite": "jest",
-    "test:sqlite-only": "jest --testPathIgnorePatterns /tests/proxied/*",
+    "test:sqlite": "TEST_DB_ONLY=sqlite ../dev-infra/with-test-redis-and-db.sh jest",
+    "test:postgres": "TEST_DB_ONLY=postgres ../dev-infra/with-test-redis-and-db.sh jest",
     "test:log": "tail -50 test.log | pino-pretty",
     "test:updateSnapshot": "../dev-infra/with-test-redis-and-db.sh jest --updateSnapshot",
     "migration:create": "ts-node ./bin/migration-create.ts"
@@ -44,8 +44,8 @@
     "@atproto/identity": "workspace:^",
     "@atproto/lexicon": "workspace:^",
     "@atproto/lexicon-resolver": "workspace:^",
-    "@atproto/oauth-scopes": "workspace:^",
     "@atproto/oauth-provider": "workspace:^",
+    "@atproto/oauth-scopes": "workspace:^",
     "@atproto/repo": "workspace:^",
     "@atproto/syntax": "workspace:^",
     "@atproto/xrpc": "workspace:^",
@@ -71,6 +71,7 @@
     "nodemailer": "^6.8.0",
     "nodemailer-html-to-text": "^3.2.0",
     "p-queue": "^6.6.2",
+    "pg": "^8.16.3",
     "pino": "^8.21.0",
     "pino-http": "^8.2.1",
     "sharp": "^0.33.5",
@@ -90,6 +91,7 @@
     "@types/express": "^4.17.13",
     "@types/express-serve-static-core": "^4.17.36",
     "@types/nodemailer": "^6.4.6",
+    "@types/pg": "^8.15.5",
     "@types/qs": "^6.9.7",
     "esbuild": "^0.14.48",
     "esbuild-plugin-handlebars": "^1.0.3",
