--- a/services/pds/Dockerfile
+++ b/services/pds/Dockerfile
@@ -51,13 +51,16 @@ COPY ./packages/xrpc-server ./packages/xrpc-server
 COPY ./services/pds ./services/pds
 
 # install all deps
-RUN pnpm install --frozen-lockfile
+RUN --mount=type=cache,target=/root/.pnpm-store \
+    pnpm install --frozen-lockfile > /dev/null
 # build all packages with external node_modules
-RUN pnpm run --recursive --stream --filter '@atproto/pds...' build
+RUN --mount=type=cache,target=/root/.pnpm-store \
+    pnpm run --recursive --stream --filter '@atproto/pds...' build > /dev/null
 # clean up
 RUN rm -rf node_modules
 # install only prod deps, hoisted to root node_modules dir
-RUN pnpm install --prod --shamefully-hoist --frozen-lockfile --prefer-offline
+RUN --mount=type=cache,target=/root/.pnpm-store \
+    pnpm install --prod --shamefully-hoist --frozen-lockfile --prefer-offline > /dev/null
 
 WORKDIR services/pds
 
